# hw6-hmm-viterbi

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
data/: Health.npz  Toy.npz
docs/source/: index.rst
notebooks/: user_case_one.ipynb
src/models/: __init__.py  decoders.py  hmm.py
test/: test_project_deliverable.py  test_user_case.py
